# aspect

./: README.md  SUMMARY  pyproject.toml  requirements.txt
.github/workflows/: astro-deploy.yml  astro-setup.yml  llamero-summarize.yaml  ops-misc.yml
SUMMARIES/: PYTHON.md
github/workflows/: SUMMARY
ops/: misc.sh
web/: SUMMARY  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
web/scripts/: SUMMARY  build_graph.py
web/src/components/: Graph.tsx  NoteList.astro  NoteView.astro  VaultGraph.astro  VaultGraph.tsx
web/src/components/graph/: GraphView.jsx
web/src/components/search/: NoteSearch.jsx
web/src/content/: config.ts
web/src/content/notes/: SUMMARY  atomic-notes.md  digital-gardens.md  evergreen-notes.md
web/src/layouts/: Layout.astro  Layout.jsx
web/src/pages/: index.astro
web/src/pages/notes/: [...slug].astro
web/src/styles/: SUMMARY  global.css
